abstraction, and endless possibilities for project expansion. 
--------------------

----- VERSION 2.5.0.3 (development) -----

2005-02-21, cfalonso
  Now, when disabling/enabling a date field, also de associated calendar icon is disabled/enabled
    - zentrack_2/includes/headerInc.php 1.55
    - zentrack_2/includes/templates/fields/date.template 1.2
    - zentrack_2/www/behavior_js.php 1.19
    - zentrack_2/www/images/disabled-cal.gif 1.1
2005-02-10, cfalonso
  Fixed a bug on behaviors when using file groups evaluating on a standard key-value field
    - includes/zenTrack.class 1.169
  Re-executed behaviors didn't run. Fixed
    - www/behavior_js.php 1.18

2005-02-09, cfalonso
  Default groups in field_map page didn't show the selected field in the pulldown, just added the $sel variable
    - includes/templates/fieldMapForm.php (not sure about the version)
  Fixed syntax error in table create script:
    - zentrack_2/install/UPGRADE_mysql.sql 1.39

2005-02-08, kato
  Fixed section flags for various views (sections can be added/deleted)
    - zentrack_2/includes/ZenFieldMap.class 1.4
    
2005-02-05, kato
  Replaced mispelled page_tile variables with page_title
    - zentrack_2/includes/editCustomSubmit.php 1.6
    - zentrack_2/includes/editTicketSubmit.php 1.11
    - zentrack_2/includes/templates/optionsMenu.php 1.5
    - zentrack_2/includes/templates/searchResults.php 1.9
    - zentrack_2/includes/templates/ticket_detailsBox.php 1.14
    - zentrack_2/www/addAgreementSubmit.php 1.4
    - zentrack_2/www/addContactSubmit.php 1.3
    - zentrack_2/www/addContacteSubmit.php 1.3
    - zentrack_2/www/assignedProjects.php 1.8
    - zentrack_2/www/admin/addBehaviorSubmit.php 1.6
    - zentrack_2/www/admin/addGroupSubmit.php 1.12
    - zentrack_2/www/admin/addUser.php 1.5
    - zentrack_2/www/admin/addUserSubmit.php 1.12
    - zentrack_2/www/admin/admin_header.php 1.12
    - zentrack_2/www/admin/config.php 1.10
    - zentrack_2/www/admin/editBehaviorSubmit.php 1.5